resistances and more stuff